fix(tooltip): videocall tooltip clipped offscreen

--- a/ui/src/components/chat/style.scss
+++ b/ui/src/components/chat/style.scss
@@ -105,7 +105,9 @@
         animation: none;
     }
 }
-
+.tooltip-arrow-top-right {
+    margin-right: 50px;
+}
 #compose {
     .typing-indicator {
         width: 100%;
